# embedded-rust

./: Cargo.toml
blink/: Cargo.toml  build.rs  memory.x
blink/src/: lib.rs
bootloader/: Cargo.toml  memory.x
bootloader/.cargo/: config.toml
bootloader/tests/: integration.rs
stm32g4-drivers/: Cargo.toml
stm32g4-drivers/src/: gpio.rs  lib.rs  reg.rs  systick.rs  timer.rs  uart.rs
tests/: integration.rs
